<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SearchFragment">
    <!--android:background="@color/searchFrag"-->

    <!-- TODO: Update blank fragment layout -->

    <Button
        android:id="@+id/searchButton"
        android:layout_width="205dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:text="@string/searchButton"
        android:onClick="onClick"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/nameText"
        android:layout_width="295dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="Name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/filterByLocationText"
        android:layout_width="wrap_content"
        android:layout_height="22dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:text="@string/locationFilter"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameText" />

    <TextView
        android:id="@+id/filterByRatingText"
        android:layout_width="wrap_content"
        android:layout_height="22dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:text="@string/ratingFilter"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/locFilterFrame" />

    <TextView
        android:id="@+id/filterToBText"
        android:layout_width="wrap_content"
        android:layout_height="22dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:text="@string/typeOfBFilter"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ratingSeekBar" />

    <RadioGroup
        android:id="@+id/locRadioGroup"
        android:layout_width="245dp"
        android:layout_height="31dp"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@+id/filterByLocationText"
        app:layout_constraintStart_toStartOf="@+id/filterByLocationText"
        app:layout_constraintTop_toBottomOf="@+id/filterByLocationText">

        <RadioButton
            android:id="@+id/locRadioNearby"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/locRadioNearby" />


        <RadioButton
            android:id="@+id/locRadioAny"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/locRadioAddress" />

    </RadioGroup>

    <FrameLayout
        android:id="@+id/locFilterFrame"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/locRadioGroup">

    </FrameLayout>

    <SeekBar
        android:id="@+id/ratingSeekBar"
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:layout_width="312dp"
        android:layout_height="32dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:max="5"
        android:progress="2"
        android:rotation="180"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/filterByRatingText" />

    <TextView
        android:id="@+id/raitingText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@+id/ratingSeekBar"
        app:layout_constraintEnd_toEndOf="@+id/ratingSeekBar"
        app:layout_constraintTop_toBottomOf="@+id/filterByRatingText"
        app:layout_constraintVertical_bias="1.0"
        tools:text="Rating" />

    <Spinner
        android:id="@+id/spinnerBusinessFilter"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginTop="8dp"
        android:dropDownWidth="match_parent"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="@+id/filterToBText"
        app:layout_constraintStart_toStartOf="@+id/filterToBText"
        app:layout_constraintTop_toBottomOf="@+id/filterToBText" />

</android.support.constraint.ConstraintLayout>